Change header position to fixed to see if that resolves issue with header image on mobile

--- a/assets/css/test.css
+++ b/assets/css/test.css
@@ -204,18 +204,18 @@ hr {
   opacity: .1;
   bottom: 10px;
   left: 20px;
-  position: absolute
+  position: absolute;
 }
 
 .header {
   display: table;
   height: 100%;
   width: 100%;
-  position: relative
+  position: relative;
 }
 
 .img-src {
-  position: absolute;
+  position: fixed;
   top: 0;
   bottom: 0;
   left: 0;
